<resources>

    <string name="app_name">Quiz App</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Enter your name</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="image">QuizImg</string>
    <string name="apple">Apple</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="congrats">Hey, Congratulations!</string>
    <string name="trophyimg">Trophy Image</string>
    <string name="username">Username</string>
    <string name="score">Your score is 9 out of 10</string>
    <string name="finish">FINISH</string>

</resources>