<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_bg"
    android:padding="20dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultTv"
        android:text="@string/result"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        >

    </TextView>

    <ImageView
        android:contentDescription="@string/trophyimg"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/tvImg"
        android:src="@drawable/ic_trophy"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvCongrats"
        android:text="@string/congrats"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic"

        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/username"
        android:textSize="16sp"
        android:layout_marginTop="20sp"
        android:textStyle="bold"


        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_score"
        android:layout_marginTop="20dp"
        android:text="@string/score"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="italic"
        android:textSize="15sp"


        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/finish"
        android:gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/finish"
        android:textColor="@color/purple_500"
        android:layout_marginTop="60sp"
        android:layout_marginStart="60sp"
        android:layout_marginEnd="60sp"

        />





</LinearLayout>