<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/ic_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="31sp"
        android:textColor="@color/white"
        android:layout_marginTop="30sp"


        />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12sp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:background="@color/white"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_marginTop="9sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:textSize="22sp"

                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_name"
                android:layout_marginTop="10sp"
                android:textStyle="bold"
                android:textSize="16sp"
                >

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:layout_marginTop="15sp"
                android:textSize="15sp"
                android:textStyle="italic"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:inputType="textCapWords"

                android:textColor="@color/black"
                android:textColorHint="@color/light_grey"


                >


            </com.google.android.material.textfield.TextInputEditText>

            <Button
                android:id="@+id/startButtonID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:layout_margin="15sp"
                >

            </Button>




        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>







</LinearLayout>