<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionsActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="16dp"

      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="Which country does this flag belong to?"
        android:textColor="@color/light_grey"
        >

    </TextView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        tools:src="@drawable/ic_flag_of_australia"
        android:contentDescription="@string/image"
        android:layout_marginTop="25dp"
        >

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        >

      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:max="10"
          android:minHeight="35dp"
          android:progress="0"
          style="?android:progressBarStyleHorizontal"
          android:indeterminate="false"
          android:layout_marginBottom="10dp"
        >

      </ProgressBar>

      <TextView
          android:id="@+id/progress_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:padding="15dp"
          tools:text="0/9"
          android:textSize="15sp">

      </TextView>


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option1"
        android:padding="15dp"
        tools:text="@string/apple"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/default_option_border"
        android:textColor="@color/light_grey"
        android:layout_margin="10dp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option2"
        android:padding="15dp"
        tools:text="@string/apple"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/default_option_border"
        android:textColor="@color/light_grey"
        android:layout_margin="10dp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option3"
        android:padding="15dp"
        tools:text="@string/apple"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/default_option_border"
        android:textColor="@color/light_grey"
        android:layout_margin="10dp"
        >

    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/option4"
        android:padding="15dp"
        tools:text="@string/apple"
        android:gravity="center"
        android:textSize="18sp"
        android:background="@drawable/default_option_border"
        android:textColor="@color/light_grey"
        android:layout_margin="10dp"
        >

    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:background="@color/purple_500"
        android:text="@string/submit"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="5sp"

        >

    </Button>


  </LinearLayout>

  </ScrollView>